z-index submenu fix

--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ nav ul li a {
     background: transparent;
     min-width: 160px;
     padding-top: 20px;
-    z-index: 1;
+    z-index: 2;
     display: none;
     left: -50%;
     margin-left: -25px;
